Align Java Kotlin Spring samples