@@ -1,27 +1,3 @@
 plugins {
-    application
-}
-
-dependencies {
-    implementation(project(":Client"))
-    implementation(project(":Server:Api"))
-    implementation(project(":Server:Play"))
-    implementation(project(":Server:Registry"))
-    implementation(project(":Server:Session"))
-    implementation(project(":Shared"))
-    implementation(files("../../../zlink-framework-core/build/libs/zlink-framework-core-0.1.0-SNAPSHOT.jar"))
-    implementation(files("../../../zlink-stream-connector/build/libs/zlink-stream-connector-0.1.0-SNAPSHOT.jar"))
-    implementation(files("../../../../../../bindings/java/build/libs/zlink-java-6.0.4.jar"))
-    implementation("io.netty:netty-buffer:4.1.100.Final")
-}
-
-java {
-    toolchain {
-        languageVersion.set(JavaLanguageVersion.of(22))
-    }
-}
-
-application {
-    mainClass.set("systems.zlink.samples.tictactoe.sessiongateway.TicTacToeSessionGatewaySample")
-    applicationDefaultJvmArgs = listOf("--enable-native-access=ALL-UNNAMED")
+    base
 }
