@@ -1,29 +1,3 @@
 plugins {
-    application
-    id("org.jetbrains.kotlin.jvm") version "2.1.0"
-}
-
-dependencies {
-    implementation(project(":Client"))
-    implementation(project(":Server:Api"))
-    implementation(project(":Server:Play"))
-    implementation(project(":Server:Registry"))
-    implementation(project(":Server:Session"))
-    implementation(project(":Shared"))
-    implementation(files("../../../zlink-framework-core/build/libs/zlink-framework-core-0.1.0-SNAPSHOT.jar"))
-    implementation(files("../../../zlink-framework-kotlin/build/libs/zlink-framework-kotlin-0.1.0-SNAPSHOT.jar"))
-    implementation(files("../../../zlink-stream-connector/build/libs/zlink-stream-connector-0.1.0-SNAPSHOT.jar"))
-    implementation(files("../../../../../../bindings/java/build/libs/zlink-java-6.0.4.jar"))
-    implementation("io.netty:netty-buffer:4.1.100.Final")
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.9.0")
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-jdk8:1.9.0")
-}
-
-kotlin {
-    jvmToolchain(22)
-}
-
-application {
-    mainClass.set("systems.zlink.samples.kotlin.tictactoe.sessiongateway.TicTacToeSessionGatewayKotlinSampleKt")
-    applicationDefaultJvmArgs = listOf("--enable-native-access=ALL-UNNAMED")
+    base
 }
